# vigil

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md
assets/: threat_ips.txt  world.json
scripts/: generate_world_data.py
src/: app.rs  config.rs  format.rs  input.rs  main.rs  score.rs  theme.rs
src/data/: alerts.rs  attacks.rs  bandwidth.rs  connections.rs  discovery.rs  fail2ban.rs  firewall.rs  geoip.rs  mod.rs  outbound.rs  ports.rs  processes.rs  procfs.rs  protocols.rs  servers.rs  system.rs  threat.rs  wire.rs
src/ui/: alerts_view.rs  attack_radar.rs  command_center.rs  doors.rs  geography.rs  header.rs  mod.rs  network_pulse.rs  outbound.rs  status_bar.rs  system_vitals.rs  tab_bar.rs  topology.rs  wire.rs
src/widgets/: bar_chart.rs  braille_map.rs  donut.rs  gauge.rs  heatmap.rs  kpi_badge.rs  line_chart.rs  mod.rs  port_flow.rs  sparkline.rs  terminal_map.rs
